--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,23 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application" %>
-    <%= javascript_importmap_tags %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-	<%= link_to 'Manage tournaments', admin_tournaments_path %>
-	<%= button_to('Sign Out', destroy_user_session_path, method: :delete) if current_user %>
     <%= yield %>
+	<nav class="navbar">
+	  <div class="container-fluid">
+		<div class="navbar-nav ms-auto">
+		  <%= link_to 'Manage tournaments', admin_tournaments_path %>
+		</div>
+		<div class="navbar-nav ms-auto">
+		  <%= button_to('Sign Out', destroy_user_session_path, method: :delete) if current_user %>
+		</div>
+	  </div>
+	</nav>
   </body>
 </html>
