--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,18 +12,29 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
-	<nav class="navbar">
-	  <div class="container-fluid">
-		<div class="navbar-nav ms-auto">
-		  <%= link_to 'Manage tournaments', admin_tournaments_path %>
-		</div>
-		<div class="navbar-nav ms-auto">
-		  <%= button_to('Sign Out', destroy_user_session_path, method: :delete) if current_user %>
-		</div>
+	<div class="container">
+	  <div class="banner row mt-5">
+		<h1 class="col-11">Age of Empires Tournament Registration Opportunities</h1>
+		<div class="col-1">
+          <%= image_tag('profile_800x800.png', width: 80, class: 'rounded', alt: :logo) %>
+		  </div>
 	  </div>
-	</nav>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+	  <nav class="navbar">
+		<div class="container-fluid">
+		  <div class="navbar-nav ms-auto">
+			<%= link_to 'Home', root_url %>
+		  </div>
+		  <div class="navbar-nav ms-auto">
+			<%= link_to 'Manage tournaments', admin_tournaments_path %>
+		  </div>
+		  <div class="navbar-nav ms-auto">
+			<%= button_to('Sign Out', destroy_user_session_path, method: :delete) if current_user %>
+		  </div>
+		</div>
+	  </nav>
+	</div>
   </body>
 </html>
