--- a/app/views/opportunities/_tournament.html.erb
+++ b/app/views/opportunities/_tournament.html.erb
@@ -1,4 +1,4 @@
-<div class="container rounded mb-2 p-2 <%= class_for_tournament(tournament) %>">
+<div class="container rounded border border-dark mb-2 p-2 <%= class_for_tournament(tournament) %>">
   <div class="row mb-2">
 	<div class="col-2">
 	  <%= tournament.game %>
