REG-21 improve appearance on mobile

--- a/app/assets/stylesheets/tournaments.css
+++ b/app/assets/stylesheets/tournaments.css
@@ -26,3 +26,11 @@ a:hover {
 .aoeiv {
     background-color: lightblue;
 }
+.aom {
+    background-color: slategray;
+    color: white;
+}
+
+.aom a {
+    color: lightblue;
+}
