--- a/app/views/admin/tournaments/_form.html.erb
+++ b/app/views/admin/tournaments/_form.html.erb
@@ -36,6 +36,12 @@
 	</div>
   </div>
   <div class="row mb-3">
+	<%= form.label :info_url, class: 'col-sm-2 col-form-label' %>
+	<div class="col-sm-6">
+	  <%= form.text_field :info_url, class: 'form-control' %>
+	</div>
+  </div>
+  <div class="row mb-3">
 	<%= form.label :registration_close, class: 'col-sm-2 col-form-label' %>
 	<div class="col-sm-4">
 	  <%= form.date_field :registration_close, class: 'form-control' %>
