--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
   <body>
 	<div class="container">
 	  <div class="banner rounded row mt-5">
-		<h1 class="col-11 text-center">Age of Empires Tournament Registration Opportunities</h1>
-		<div class="col-1 mt-2">
-		  <a data-bs-toggle="collapse" href="#bottom-navbar">
+		<h1 class="col-10 col-lg-11 text-lg-center pt-2">Age of Empires Tournament Registration Opportunities</h1>
+		<div class="col-2 col-lg-1 mt-2 mb-2">
+		  <a data-bs-toggle="collapse" href="#bottom-navbar" class="float-end">
 			<%= image_tag('profile_800x800.png', width: 80, class: 'rounded', alt: :logo) %>
 		  </a>
 		</div>
