--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <body>
 	<div class="container">
-	  <div class="banner rounded row mt-5">
+	  <div class="banner rounded row mt-5 mb-5">
 		<h1 class="col-10 col-lg-11 text-lg-center pt-2">Age of Empires Tournament Registration Opportunities</h1>
 		<div class="col-2 col-lg-1 mt-2 mb-2">
 		  <a data-bs-toggle="collapse" href="#bottom-navbar" class="float-end">
@@ -23,8 +23,8 @@
 		  </a>
 		</div>
 	  </div>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <% if notice %><p class="alert alert-success"><%= notice %></p><% end %>
+      <% if alert %><p class="alert alert-danger"><%= alert %></p><% end %>
       <%= yield %>
       <div>Have something you'd like to tell us? <%= link_to 'Send us a message!', new_messages_path %></div>
 	  <nav class="navbar <%= 'collapse' unless current_user %>" id="bottom-navbar">
