--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Tourney Opportunities</title>
+    <meta charset="utf-8" /> 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= favicon_link_tag asset_path('favicon.ico') %>
 
@@ -33,6 +34,9 @@
 		  </div>
 		  <div>
 			<%= link_to 'Manage tournaments', admin_tournaments_path %>
+		  </div>
+		  <div>
+			<%= link_to 'Messages', admin_messages_url  if current_user %>
 		  </div>
 		  <div>
 			<%= button_to('Sign Out', destroy_user_session_path, method: :delete) if current_user %>
