--- a/app/views/admin/tournaments/_tournament.html.erb
+++ b/app/views/admin/tournaments/_tournament.html.erb
@@ -25,7 +25,10 @@
     </div>
     <div class="col-1">
       <% if current_user.admin? %>
-        <%= button_to("Publish", update_status_admin_tournament_path(tournament), method: :patch, params: { status: :published }) unless ['ignored', 'published'].include?(tournament.status) %>
+        <%= button_to("Publish", update_status_admin_tournament_path(tournament),
+            disabled: tournament.registration_close.blank?,
+            title: tournament.registration_close.blank? ? 'Needs registration_close' : '',
+            method: :patch, params: { status: :published }) unless ['ignored', 'published'].include?(tournament.status) %>
       <% elsif tournament.message %>
         <%= button_to("Request Not Publish", toggle_request_publication_admin_tournament_path(tournament), method: :patch) unless ['ignored', 'published'].include?(tournament.status) %>
       <% else %>
