--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -1,21 +1,21 @@
 <div class="row d-none d-lg-flex ">
   <div class="col-2 nav justify-content-center">
-    Game
+    <%= t(:game) %>
   </div>
   <div class="col-2 nav justify-content-center">
-    Name
+    <%= t(:name) %>
   </div>
   <div class="col-1 nav justify-content-center">
-    Deadline
+    <%= t(:deadline) %>
   </div>
   <div class="col-2 nav justify-content-center">
-    Links
+    <%= t(:links) %>
   </div>
   <div class="col-3 nav justify-content-center">
-    Restrictions
+    <%= t(:restrictions) %>
   </div>
   <div class="col-2 nav justify-content-center">
-    Notes
+    <%= t(:notes) %>
   </div>
 </div>
 <%= render partial: 'opportunities/tournament', collection: @tournaments %>
