--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Tourney Opportunities</title>
-    <meta charset="utf-8" /> 
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= favicon_link_tag asset_path('favicon.ico') %>
 
@@ -17,7 +17,7 @@
   <body>
 	<div class="container">
 	  <div class="banner rounded row mt-5 mb-5">
-		<h1 class="col-10 col-lg-11 text-lg-center pt-2">Age of Empires Tournament Registration Opportunities</h1>
+		<h1 class="col-10 col-lg-11 text-lg-center pt-2">Age of Empires <%= t(:registration_opportunities) %></h1>
 		<div class="col-2 col-lg-1 mt-2 mb-2">
 		  <a data-bs-toggle="collapse" href="#bottom-navbar" class="float-end">
 			<%= image_tag('profile_800x800.png', width: 80, class: 'rounded', alt: :logo) %>
@@ -27,19 +27,19 @@
       <% if notice %><p class="alert alert-success"><%= notice %></p><% end %>
       <% if alert %><p class="alert alert-danger"><%= alert %></p><% end %>
       <%= yield %>
-      <div>Have something you'd like to tell us? <%= link_to 'Send us a message!', new_messages_path %></div>
+      <div><%= t(:have_something_to_tell_us) %> <%= link_to t(:contact_us), new_messages_path %></div>
 	  <nav class="navbar <%= 'collapse' unless current_user %>" id="bottom-navbar">
 		  <div>
-			<%= link_to 'Home', root_url  if current_user %>
+			<%= link_to t(:home_page), root_url  if current_user %>
 		  </div>
 		  <div>
-			<%= link_to 'Manage tournaments', admin_tournaments_path %>
+			<%= link_to t(:manage_tournaments), admin_tournaments_path %>
 		  </div>
 		  <div>
-			<%= link_to 'Messages', admin_messages_url  if current_user %>
+			<%= link_to t(:messages), admin_messages_url  if current_user %>
 		  </div>
 		  <div>
-			<%= button_to('Sign Out', destroy_user_session_path, method: :delete) if current_user %>
+			<%= button_to(t(:sign_out), destroy_user_session_path, method: :delete) if current_user %>
 		  </div>
 	  </nav>
 	</div>
