--- a/app/views/admin/tournaments/_tournament.html.erb
+++ b/app/views/admin/tournaments/_tournament.html.erb
@@ -38,10 +38,15 @@
     <% if current_user.admin? && tournament.flags.present?
          tournament.flags.split(':').each do |flag| %>
           <div class="col-1"><%= button_to(flag, remove_flag_admin_tournament_path(tournament), method: :patch, params: { flag: }) %></div>
-    <% end end %>
+    <% end %>
 
     <div class="col-sm">
       <%= link_to(t(:edit), edit_admin_tournament_path(tournament)) if ['pending', 'published'].include?(tournament.status) %>
+    </div>
+    <% end %>
+    <% else %>
+    <div class="col-2">
+        <%= link_to(t(:claim), new_admin_tournament_tournament_claim_path(tournament)) unless tournament.waiting_claim_by(current_user) %>
     </div>
     <% end %>
   </div>
