--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,12 +32,10 @@
 
       <% if notice %><p class="alert alert-success"><%= notice %></p><% end %>
       <% if alert %><p class="alert alert-danger"><%= alert %></p><% end %>
+      <%= content_tag(:p, t('pointless_without_cookies'), class: 'alert alert-danger') if params[:pointless] == 'true' %>
       <%= yield %>
       <div><%= t(:have_something_to_tell_us) %> <%= link_to t(:contact_us), new_messages_path %></div>
 	  <nav class="navbar <%= 'collapse' unless current_user %>" id="bottom-navbar">
-		  <div>
-			<%= link_to t(:home_page), root_url  if current_user %>
-		  </div>
 		  <div>
 			<%= link_to t(:manage_tournaments), admin_tournaments_path %>
 		  </div>
@@ -51,6 +49,20 @@
 			<%= button_to(t(:sign_out), destroy_user_session_path, method: :delete) if current_user %>
 		  </div>
 	  </nav>
+      <nav class="navbar">
+		  <div>
+			<%= link_to t(:home_page), root_url %>
+		  </div>
+		  <div>
+			<%= link_to t(:privacy_policy), compliance_privacy_policy_path %>
+		  </div>
+		  <div>
+			<%= link_to t(:terms_of_service), compliance_terms_path %>
+		  </div>
+      </nav>
+      <% if cookies[:allow_cookies].blank? %>
+        <%= render 'layouts/cookie_bar' %>
+      <% end %>
 	</div>
   </body>
 </html>
