Fix and noramlize localizations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
 			<%= link_to t(:privacy_policy), compliance_privacy_policy_path %>
 		  </div>
 		  <div>
-			<%= link_to t(:terms_of_service), compliance_terms_path %>
+			<%= link_to t(:terms_of_use), compliance_terms_path %>
 		  </div>
       </nav>
       <% if cookies[:allow_cookies].blank? %>
