--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,22 +19,13 @@
 	  <div class="banner rounded row mt-5 mb-5">
 		<h1 class="col-10 col-lg-11 text-lg-center pt-2">Age of Empires <%= t(:registration_opportunities) %></h1>
 		<div class="col-2 col-lg-1 mt-2 mb-2">
-		  <a data-bs-toggle="collapse" href="#bottom-navbar" class="float-end">
-			<%= image_tag('profile_800x800.png', width: 80, class: 'rounded', alt: :logo) %>
-		  </a>
+         <%= image_tag('profile_800x800.png', width: 80, class: 'rounded', alt: :logo) %>
 		</div>
 	  </div>
-      <div class="d-flex flex-row-reverse">
-        <% I18n.available_locales.each do |locale| %>
-        <span class="pe-2"><%= link_to(locale, add_param_to_path(request.path, :locale, locale)) %></span>
-        <% end %>
-      </div>
-
       <% if notice %><p class="alert alert-success"><%= notice %></p><% end %>
       <% if alert %><p class="alert alert-danger"><%= alert %></p><% end %>
-      <%= content_tag(:p, t('pointless_without_cookies'), class: 'alert alert-danger') if params[:pointless] == 'true' %>
       <%= yield %>
-      <div><%= t(:have_something_to_tell_us) %> <%= link_to t(:contact_us), new_messages_path %></div>
+      <% unless current_page?(root_path) %>
 	  <nav class="navbar <%= 'collapse' unless current_user %>" id="bottom-navbar">
 		  <div>
 			<%= link_to t(:manage_tournaments), admin_tournaments_path %>
@@ -71,8 +62,6 @@
 			<%= link_to 'FAQ', compliance_faq_path %>
 		  </div>
       </nav>
-      <% if cookies[:allow_cookies].blank? %>
-        <%= render 'layouts/cookie_bar' %>
       <% end %>
 	</div>
   </body>
