--- a/app/views/admin/tournaments/_form.html.erb
+++ b/app/views/admin/tournaments/_form.html.erb
@@ -40,7 +40,7 @@
 	</div>
   </div>
   <div class="row mb-3">
-	<%= form.label :registration_close, class: 'col-sm-2 col-form-label' %>
+	<%= form.label :registration_close, 'registration close', class: 'col-sm-2 col-form-label' %>
 	<div class="col-sm-4">
 	  <%= form.date_field :registration_close, class: 'form-control' %>
 	</div>
